<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutAddURLContainer"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/bg_dialog">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/btnAddURL"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web"
        app:tint="@color/col_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAddURL"
        app:layout_constraintTop_toTopOf="@+id/btnAddURL"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/edtUrl"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_url_here"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/btnAddURL"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAdd"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/add"
        android:textColor="@color/col_accent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUrl"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCancel"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textColor="@color/col_accent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtAdd"
        app:layout_constraintTop_toBottomOf="@id/edtUrl"/>



</androidx.constraintlayout.widget.ConstraintLayout>