<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteTodoContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/bg_dialog">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/btnDeleteTodo"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete_todo"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/btnDeleteTodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDeleteTodo"
        app:layout_constraintTop_toTopOf="@id/btnDeleteTodo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDeleteConfirmation"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/are_you_sure_want_to_delete_this_todo"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteTodo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDelete"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/delete"
        android:textAllCaps="true"
        android:textColor="@color/col_del"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDeleteConfirmation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCancel"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/col_accent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtDelete"
        app:layout_constraintTop_toBottomOf="@id/txtDeleteConfirmation"/>

</androidx.constraintlayout.widget.ConstraintLayout>