<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutMisc"
    android:background="@drawable/bg_color"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/txtMisc"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/setup"
        android:textColor="@color/white"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutTodoColor"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/Color1"
                android:background="@drawable/bg_item_color_1"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btnColor1"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/Color2"
                android:background="@drawable/bg_item_color_2"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btnColor2"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/Color3"
                android:background="@drawable/bg_item_color_3"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btnColor3"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/Color4"
                android:background="@drawable/bg_item_color_4"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btnColor4"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/Color5"
                android:background="@drawable/bg_item_color_5"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btnColor5"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/pick_your_color"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/layoutAddImage"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textSize="12sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/layoutAddLink"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textSize="12sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/layoutDeleteTodo"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/col_del" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete"
            android:textColor="@color/col_del"
            android:textSize="12sp"/>

    </LinearLayout>

</LinearLayout>