<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_luar"
    tools:context=".catatan.activities.AddTodo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btnBack"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/btnSave"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_done"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnBack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/titleTodo"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="12dp"
                android:background="@color/white"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/btnBack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/dateTodo"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:hint="@string/set_deadline"
                android:textColorHint="@color/black"
                android:gravity="center|left"
                android:drawablePadding="5dp"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/titleTodo"
                app:layout_constraintStart_toStartOf="@id/titleTodo"
                app:layout_constraintTop_toBottomOf="@id/titleTodo"
                app:drawableLeftCompat="@drawable/ic_callendar"
                tools:ignore="RtlHardcoded,SmallSp" />

            <EditText
                android:id="@+id/subTodo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/type_subtitle_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColorHint="#1B1B1B"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/descTodoColor"
                app:layout_constraintTop_toBottomOf="@id/dateTodo" />

            <View
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:id="@+id/descTodoColor"
                android:layout_marginStart="12dp"
                android:background="@drawable/bg_sub"
                app:layout_constraintBottom_toBottomOf="@id/subTodo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/subTodo"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageTodo"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/subTodo"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/btnDeleteImage"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_del"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageTodo"
                app:layout_constraintTop_toTopOf="@id/imageTodo"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutWebURL"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageTodo"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtWebURl"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textSize="13sp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/btnDeleteURL"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/col_del" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputTodo"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_description_here"
                android:textColorHint="@color/black"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_color"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>